unpackaged/main/default/objects/NCM_Lead_Entry__c/NCM_Lead_Entry__c.object-meta.xml
<CustomObject>
    <description>Module for NCM employees to add leads they wish to have submitted to the Sales Pipeline (Lead to Opportunity)</description>
    <label>NCM Lead</label>
    <nameField>
        <label>NCM Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCM Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>