unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field searches Salesforce for an existing Account in the system and populates all of the Company Fields if found.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NCM Leads</relationshipLabel>
    <relationshipName>NCM_Lead_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>