unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/AddressCity__c.field-meta.xml
<CustomField>
    <fullName>AddressCity__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>