unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/AddressCountry__c.field-meta.xml
<CustomField>
    <fullName>AddressCountry__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>