unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/AddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AddressPostalCode__c</fullName>
    <label>Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>