unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/AddressState__c.field-meta.xml
<CustomField>
    <fullName>AddressState__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>