unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/AddressStreet__c.field-meta.xml
<CustomField>
    <fullName>AddressStreet__c</fullName>
    <label>Street</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>