unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_Days__c</fullName>
    <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>