unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <label>Badge #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>