unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>