unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Confirmed_Interest__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lead has been contacted via phone, email or in person and you have confirmed their interest in the selected product of interest.</inlineHelpText>
    <label>Lead has been contacted &amp; confirmed?</label>
    <type>Checkbox</type>
</CustomField>