unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Confirmed_Interest_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Interest_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed Interest By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCM_Lead_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>