unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Confirmed_Interest_Note__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Interest_Note__c</fullName>
    <label>Confirmed Interest Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>