unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Confirmed_Interest_On__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Interest_On__c</fullName>
    <label>Confirmed Interest On</label>
    <type>DateTime</type>
</CustomField>