unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field searches Salesforce for an existing Contact in the system and populates the contact info fields with the information we already have</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCM Leads (Contact)</relationshipLabel>
    <relationshipName>NCM_Lead_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>