unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Disqualify_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualify_Reason__c</fullName>
    <label>Disqualify Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to reach</fullName>
            </value>
            <value>
                <fullName>Inaccurate/not enough information</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Current client - product/services assistance</fullName>
            </value>
            <value>
                <fullName>Duplicate lead</fullName>
            </value>
            <value>
                <fullName>Spam lead</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>