unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Disqualify_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disqualify_Reason_Notes__c</fullName>
    <description>Why was the lead disqualified?</description>
    <label>Disqualify Reason Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>