unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Employee_Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Referral_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Referral Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCM_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>