unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/External_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_Id__c</fullName>
    <label>External Reference Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>