unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <label>Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Follow_Up</valueSetName>
    </valueSet>
</CustomField>