unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>NCM_Lead_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>