unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Lead_Entry_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Entry_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Entry Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>NCM_Lead_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>