unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Lead_Entry_Record_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Lead_Entry_Record_ID_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Entry Record ID (18)</label>
    <type>Text</type>
</CustomField>