unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Lead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes__c</fullName>
    <inlineHelpText>Enter as much information about this lead for NCM Support.</inlineHelpText>
    <label>Lead Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>