unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipName>NCM_Lead_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>