unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/NCM_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>NCM_Product_Interest__c</fullName>
    <label>NCM Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Business_Unit</valueSetName>
    </valueSet>
</CustomField>