unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Opportunity_Last_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Last_Engagement__c</fullName>
    <formula>IF(
    ISBLANK(Opportunity__c),
    NULL,
    IF(
        Opportunity__r.LastActivityDate &gt;  Opportunity__r.Stage_Changed_Date_Code__c , 
        Opportunity__r.LastActivityDate, 
        Opportunity__r.Stage_Changed_Date_Code__c
    )
)</formula>
    <label>Opportunity Last Engagement</label>
    <type>Date</type>
</CustomField>