unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NCM Leads (Parent Account)</relationshipLabel>
    <relationshipName>NCM_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>