unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Primary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>NCM Leads</relationshipLabel>
    <relationshipName>NCM_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>