unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCM_Lead_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>