unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Salesperson_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Name__c</fullName>
    <formula>Salesperson__r.FirstName &amp; &quot; &quot; &amp;  Salesperson__r.LastName</formula>
    <label>Salesperson Name</label>
    <type>Text</type>
</CustomField>