unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Salesperson_Request_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Request_Date_Time__c</fullName>
    <label>Salesperson Request Date / Time</label>
    <type>DateTime</type>
</CustomField>