unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Salesperson_Support_Requested__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Support_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this will request support from the department responsible for the Product Interest selected (i.e. CEC for Retail Solutions, NCMi Sales for Institute, Software Solutions Sales for Healthcheck / axcessa).</inlineHelpText>
    <label>Do you Need Assistance with Follow-up?</label>
    <type>Checkbox</type>
</CustomField>