unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Spoke_With__c.field-meta.xml
<CustomField>
    <fullName>Spoke_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spoke With</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>NCM_Lead_Entries2</relationshipName>
    <type>Lookup</type>
</CustomField>