unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Spoke_With_Email__c.field-meta.xml
<CustomField>
    <fullName>Spoke_With_Email__c</fullName>
    <label>Spoke With Email</label>
    <type>Email</type>
</CustomField>