unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Spoke_With_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Spoke_With_First_Name__c</fullName>
    <label>Spoke With First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>