unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Spoke_With_Phone__c.field-meta.xml
<CustomField>
    <fullName>Spoke_With_Phone__c</fullName>
    <label>Spoke With Phone</label>
    <type>Phone</type>
</CustomField>