unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Opportunity Stage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>