unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entered</fullName>
                <default>true</default>
                <label>Entered</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Invalidated</fullName>
                <isActive>false</isActive>
                <label>Invalidated</label>
            </value>
            <value>
                <fullName>Promising</fullName>
                <isActive>false</isActive>
                <label>Promising</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>