unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>64</length>
    <type>Text</type>
</CustomField>