unpackaged/main/default/objects/NCM_Lead_Entry__c/fields/User_Involved__c.field-meta.xml
<CustomField>
    <fullName>User_Involved__c</fullName>
    <formula>OR(
    $User.Id =  CreatedById,
    $User.Id =  OwnerId,
    $User.Id =  Salesperson__c,
    $User.Id =  Employee_Referral_Name__c 
)</formula>
    <label>User Involved?</label>
    <type>Checkbox</type>
</CustomField>