unpackaged/main/default/objects/NCM_Lead_Entry__c/recordTypes/DHG_TAG.recordType-meta.xml
<RecordType>
    <fullName>DHG_TAG</fullName>
    <active>true</active>
    <label>TAG / DHG</label>
</RecordType>