unpackaged/main/default/objects/NCM_Lead_Entry__c/recordTypes/General_Undefined.recordType-meta.xml
<RecordType>
    <fullName>General_Undefined</fullName>
    <active>true</active>
    <label>General / Undefined</label>
</RecordType>