unpackaged/main/default/objects/NCM_Lead_Entry__c/recordTypes/Institute.recordType-meta.xml
<RecordType>
    <fullName>Institute</fullName>
    <active>true</active>
    <label>Institute</label>
</RecordType>