unpackaged/main/default/objects/NCM_Lead_Entry__c/recordTypes/Lead_Entry.recordType-meta.xml
<RecordType>
    <fullName>Lead_Entry</fullName>
    <active>true</active>
    <label>Lead Entry</label>
</RecordType>