unpackaged/main/default/objects/NCM_Lead_Entry__c/recordTypes/Retail_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Retail_Solutions</fullName>
    <active>true</active>
    <label>Retail Solutions</label>
</RecordType>