unpackaged/main/default/objects/NCM_Lead_Entry__c/recordTypes/Software_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Software_Solutions</fullName>
    <active>true</active>
    <label>Intech</label>
</RecordType>