unpackaged/main/default/objects/NCM_Lead_Entry__c/recordTypes/Tradeshow.recordType-meta.xml
<RecordType>
    <fullName>Tradeshow</fullName>
    <active>true</active>
    <label>Tradeshow</label>
</RecordType>