unpackaged/main/default/objects/NCM_Lead_Entry__c/recordTypes/Travel_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Travel_Solutions</fullName>
    <active>true</active>
    <label>Travel Solutions</label>
</RecordType>