unpackaged/main/default/objects/NCM_Lead_Entry__c/recordTypes/TSI.recordType-meta.xml
<RecordType>
    <fullName>TSI</fullName>
    <active>false</active>
    <label>Business Management Solutions</label>
</RecordType>