unpackaged/main/default/objects/NCM_Lead_Entry__c/validationRules/Account_Info_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Info_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISBLANK( Account__c ),
    ISBLANK( Contact__c ),
    ISBLANK( Company__c )
)</errorConditionFormula>
    <errorMessage>You must provide either an existing Account or an Account Name to save a Lead Entry</errorMessage>
</ValidationRule>