unpackaged/main/default/objects/NCM_Lead_Entry__c/validationRules/Contact_Info_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Info_Required</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    AND(
        ISBLANK(Contact__c),
        ISBLANK(First_Name__c),
        ISBLANK(Last_Name__c)
    ),
    AND(
        ISBLANK(Contact__c),
        OR(
            ISBLANK(First_Name__c),
            ISBLANK(Last_Name__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>You must provide either a contact link, or a First &amp; Last Name in order to save the Lead Entry</errorMessage>
</ValidationRule>