unpackaged/main/default/objects/NCM_Lead_Entry__c/validationRules/Group_Lead_Entry_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Lead_Entry_Owner</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Group_Id__c)),
    Lead_Entry_Owner__c &lt;&gt; Group_Id__r.NCM_Proprietor__c,
    Lead_Entry_Owner__c &lt;&gt; Group_Id__r.NCM_Support_Staff__c,
    Lead_Entry_Owner__r.User_ID__r.UserRole.Name &lt;&gt; &#39;CEC&#39;,
    NOT(ISNEW()),
    NOT(ISCHANGED(Group_Id__c))
)</errorConditionFormula>
    <errorDisplayField>Lead_Entry_Owner__c</errorDisplayField>
    <errorMessage>When selecting 20 Group, the owner must be one of the following: the Producer or Support Staff for the Group, or they must be a part of CEC</errorMessage>
</ValidationRule>