unpackaged/main/default/objects/NCM_Lead_Entry__c/validationRules/Group_Required_for_20_Group_Interest.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Required_for_20_Group_Interest</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(
        NCM_Product_Interest__c,
        &quot;20 Group&quot;
    ),
    ISBLANK( Group_Id__c )
)</errorConditionFormula>
    <errorDisplayField>Group_Id__c</errorDisplayField>
    <errorMessage>You must identify the Group when selecting 20 Group</errorMessage>
</ValidationRule>