unpackaged/main/default/objects/NCM_Lead_Entry__c/validationRules/Interest_Cannot_Change_After_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_Cannot_Change_After_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED( NCM_Product_Interest__c ),
    NOT( ISBLANK(  Opportunity__c  ) )
)</errorConditionFormula>
    <errorMessage>You cannot change the Primary Interest after the Opportunity has been created</errorMessage>
</ValidationRule>