unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NCM_Product_Interest__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Porsche Hawaii</value>
    </filters>
    <label>All</label>
</ListView>