unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/All_NCM_Leads_Mod_Version.listView-meta.xml
<ListView>
    <fullName>All_NCM_Leads_Mod_Version</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Employee_Referral_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NCM_Product_Interest__c</columns>
    <columns>Group_Id__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Involved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <label>All NCM Leads - Mod. Cross Sell Version</label>
</ListView>