unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/BMS_Lead_Queue.listView-meta.xml
<ListView>
    <fullName>BMS_Lead_Queue</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NCM_Product_Interest__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:180</value>
    </filters>
    <filters>
        <field>NCM_Product_Interest__c</field>
        <operation>equals</operation>
        <value>aXcessa,Echo</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <label>Intech - Lead Queue</label>
</ListView>