unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/BMS_Leads.listView-meta.xml
<ListView>
    <fullName>BMS_Leads</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NCM_Product_Interest__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NCM_Lead_Entry__c.Software_Solutions</value>
    </filters>
    <filters>
        <field>NCM_Product_Interest__c</field>
        <operation>equals</operation>
        <value>Core,Echo</value>
    </filters>
    <label>Intech Leads</label>
</ListView>