unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/Core_Leads.listView-meta.xml
<ListView>
    <fullName>Core_Leads</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NCM_Product_Interest__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NCM_Product_Interest__c</field>
        <operation>equals</operation>
        <value>Core</value>
    </filters>
    <label>Core Leads</label>
</ListView>