unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/General_NCM_Leads.listView-meta.xml
<ListView>
    <fullName>General_NCM_Leads</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>NCM_Product_Interest__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NCM_Product_Interest__c</field>
        <operation>equals</operation>
        <value>General NCM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Disqualified</value>
    </filters>
    <label>General NCM Leads</label>
</ListView>