unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/Marketo_Leads.listView-meta.xml
<ListView>
    <fullName>Marketo_Leads</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>msync</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Disqualified</value>
    </filters>
    <label>Marketo - Lead Queue</label>
</ListView>