unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/My_Leads.listView-meta.xml
<ListView>
    <fullName>My_Leads</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Company__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Leads</label>
</ListView>