unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/NCM_Institute_Lead_Queue.listView-meta.xml
<ListView>
    <fullName>NCM_Institute_Lead_Queue</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NCM_Product_Interest__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NCM_Lead_Entry__c.Institute</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>NCM Institute Sales</value>
    </filters>
    <label>NCM Institute - Lead Queue</label>
</ListView>