unpackaged/main/default/objects/NCM_Lead_Entry__c/listViews/NCM_Institute_Leads.listView-meta.xml
<ListView>
    <fullName>NCM_Institute_Leads</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NCM_Product_Interest__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NCM_Lead_Entry__c.Institute</value>
    </filters>
    <label>NCM Institute Leads</label>
</ListView>